# sentinel

./: .dockerignore  .env.example  .gitignore  .prettierignore  DEPLOY.md  PROGRESS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  rust-toolchain.toml  turbo.json
apps/api/: .env.example  Dockerfile  README.md  fly.toml  package.json  tsup.config.ts
apps/api/src/: app.ts  env.ts  index.ts
apps/api/src/lib/: errors.ts  ws-hub.ts
apps/api/src/plugins/: auth.ts  prisma.ts  redis.ts  websocket.ts
apps/api/src/repositories/: alerts.ts  rules.ts
apps/api/src/routes/: alerts.ts  auth.ts  health.ts  rules.ts  webhooks.ts
apps/api/src/services/: auth.ts  enrichment.ts  helius.ts  rules.ts  sol-price.ts
apps/web/: .env.example  README.md  auth.ts  eslint.config.mjs  middleware.ts  next.config.ts  package.json  postcss.config.mjs  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(app)/alerts/: page.tsx
apps/web/app/(app)/dashboard/: page.tsx
apps/web/app/(app)/settings/: page.tsx
apps/web/app/(app)/watchlist/: page.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/signup/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/: app-shell.tsx  connection-status.tsx  empty-state.tsx  page-header.tsx  theme-toggle.tsx
apps/web/components/auth/: auth-card-shell.tsx  auth-chrome.tsx  auth-field.tsx  password-input.tsx
apps/web/components/brand/: sentinel-logo.tsx
apps/web/components/landing/: cta-section.tsx  faq-section.tsx  feature-pillars.tsx  fonts.ts  footer.tsx  hero.tsx  how-it-works-section.tsx  landing-page.tsx  live-feed-section.tsx  nav-bar.tsx  page-shell.tsx  section-frame.tsx  section-header.tsx  section-shell.tsx  use-cases-section.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  skeleton.tsx
apps/web/features/alerts/: alert-card.tsx  alert-details-dialog.tsx  alert-feed.tsx  dashboard-banner.tsx  event-meta.tsx  risk-badge.tsx  rule-tabs.tsx  sample-alerts.ts  summarize.ts  use-alerts.ts  use-enrichment.ts  use-live-alerts.ts  use-sample-stream.ts
apps/web/features/auth/: login-form.tsx  sign-out-button.tsx  signup-form.tsx
apps/web/features/watchlist/: rule-form.tsx  rule-list.tsx  use-watch-rules.ts  wallet-input.tsx
apps/web/lib/: api.ts  cn.ts  config.ts  landing-routes.ts
apps/web/types/: next-auth.d.ts
rust/: Cargo.toml  Dockerfile  README.md  fly.ingestor.toml  fly.matcher.toml
rust/.sqlx/: query-2281f9da582a5f51448d1cde66c43130abb977b8bc35a4b46b08e6408e443b81.json  query-3269eeac5cb3a8c31a8971ff404242f4ae55984bc7ee65ba2d3c28eb736f852c.json  query-37dd0d330d2b1dfb271fb91e2c4fa2a06602d7c327ab269b9ef131dfa2d6fccc.json
rust/crates/core/: Cargo.toml  README.md
rust/crates/core/src/: constants.rs  decode.rs  lib.rs  matching.rs  types.rs
rust/ingestor/: Cargo.toml  README.md
rust/ingestor/src/: config.rs  main.rs  price.rs  publisher.rs
rust/ingestor/src/source/: mock.rs  mod.rs  rpc_ws.rs  yellowstone.rs
rust/matcher/: Cargo.toml  README.md
rust/matcher/src/: cache.rs  config.rs  db.rs  enrich.rs  main.rs
