[workspace]
resolver = "2"
members = ["crates/core", "ingestor", "matcher"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
sentinel-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10"
thiserror = "2"
# Service deps (tokio, redis, sqlx, async-openai, tracing, anyhow, envy, uuid,
# rand, chrono, futures-util) are added here per-phase as they're used.

# Faster, smaller release binaries for the hot-path services.
# Expanded/measured in Phase 10.
[profile.release]
lto = "thin"
codegen-units = 1
