[workspace]
resolver = "2"
members = ["crates/core", "ingestor", "matcher"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
sentinel-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10"
thiserror = "2"
# Service deps
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "tls-rustls-webpki-roots"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
envy = "0.4"
dotenvy = "0.15"
rand = "0.8"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Faster, smaller release binaries for the hot-path services.
# Expanded/measured in Phase 10.
[profile.release]
lto = "thin"
codegen-units = 1
