[package]
name = "sentinel-ingestor"
description = "Solana stream (Helius Yellowstone gRPC) -> normalized events -> Redis."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sentinel-core = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
envy = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
