[package]
name = "sentinel-matcher"
description = "Consumes events, matches active rules, persists + enriches alerts."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sentinel-core = { workspace = true }
# Phase 6/8: tokio, redis, sqlx, async-openai, serde_json, tracing, config.
