[package]
name = "sentinel-matcher"
description = "Consumes events, matches active rules, persists + enriches alerts."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sentinel-core = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
envy = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
