[package]
name = "sentinel-core"
description = "Shared Sentinel domain types, match_rule logic, decoders, and constants."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
thiserror = { workspace = true }
